--- a/Personal Website Vanilla/css/style.css
+++ b/Personal Website Vanilla/css/style.css
@@ -45,8 +45,7 @@ nav {
   nav .logo {
     flex-grow: 1; }
     nav .logo a {
-      font-size: 1.5rem;
-      font-weight: 500; }
+      font-size: 1.5rem; }
   nav ul {
     list-style: none;
     gap: 20px;
@@ -122,7 +121,6 @@ nav {
       color: #000; }
     .home .home-info__contacts button {
       width: 120px;
-      font-weight: 500;
       padding: 12px;
       border-radius: 8px;
       background-image: linear-gradient(315deg, #742df6 25%, #25a2ef);
@@ -172,7 +170,7 @@ nav {
         background-color: #f9fafb;
         padding: 12px 12px;
         border-radius: 8px;
-        box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+        box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
         margin: 20px 0 10px 0;
         transition: opacity 0.6s ease-out; }
         .skills .skills-info__technologies__card img {
@@ -180,8 +178,7 @@ nav {
           height: 48px; }
         .skills .skills-info__technologies__card span {
           display: inline-block;
-          margin-left: 20px;
-          font-weight: 500; }
+          margin-left: 20px; }
 
 .projects {
   flex-direction: column; }
@@ -195,7 +192,7 @@ nav {
     color: #666666;
     font-size: 1.1rem;
     line-height: 1.5;
-    margin-top: 12px; }
+    margin-top: 10px; }
   .projects__list {
     display: flex;
     flex-wrap: wrap;
@@ -210,7 +207,7 @@ nav {
       background-color: #f9fafb;
       padding: 10px;
       border-radius: 8px;
-      box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.5);
+      box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
       margin: 20px 20px 0 0;
       opacity: 0.8; }
       .projects__list .projects-card:hover {
@@ -239,5 +236,37 @@ nav {
         margin-right: 6px; }
       .projects__list .projects-card__repository span {
         color: #000; }
+
+.contact {
+  flex-direction: column;
+  justify-content: center; }
+  .contact h2 {
+    font-weight: 500;
+    color: #42446e;
+    font-size: 2rem;
+    margin-bottom: 40px; }
+  .contact form {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 80%;
+    max-width: 400px; }
+    .contact form .text-input {
+      outline: none;
+      box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.5);
+      border: none;
+      border-radius: 8px;
+      padding: 15px;
+      resize: none; }
+    .contact form button {
+      color: #fff;
+      width: 150px;
+      padding: 12px;
+      border-radius: 8px;
+      background-image: linear-gradient(315deg, #742df6 25%, #25a2ef);
+      opacity: 0.9; }
+      .contact form button:hover {
+        opacity: 1; }
 
 /*# sourceMappingURL=style.css.map */
