--- a/Personal Website Vanilla/css/style.css
+++ b/Personal Website Vanilla/css/style.css
@@ -20,7 +20,7 @@ button {
   background: transparent;
   cursor: pointer; }
 
-nav .logo a, .home .home-info__title h1 .name {
+nav .logo a, .home .home-info__title h1 .name, footer .links .logo a {
   background-image: linear-gradient(315deg, #742df6 25%, #25a2ef);
   background-clip: text;
   color: transparent; }
@@ -113,12 +113,12 @@ nav {
       justify-content: space-evenly;
       width: 120px;
       margin: 10px 0; }
-    .home .home-info__contacts .fa-linkedin {
-      font-size: 1.75rem;
-      color: #0a66c2; }
-    .home .home-info__contacts .fa-github {
-      font-size: 1.75rem;
-      color: #000; }
+      .home .home-info__contacts .social-media .fa-linkedin {
+        font-size: 1.75rem;
+        color: #0a66c2; }
+      .home .home-info__contacts .social-media .fa-github {
+        font-size: 1.75rem;
+        color: #000; }
     .home .home-info__contacts button {
       width: 120px;
       padding: 12px;
@@ -268,5 +268,24 @@ nav {
       opacity: 0.9; }
       .contact form button:hover {
         opacity: 1; }
+
+footer {
+  padding: 20px;
+  text-align: center;
+  font-size: 0.8rem;
+  color: #666666; }
+  footer .links {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 4px; }
+    footer .links .social-media {
+      display: flex;
+      gap: 15px; }
+      footer .links .social-media .fa-linkedin {
+        font-size: 1.5rem;
+        color: #0a66c2; }
+      footer .links .social-media .fa-github {
+        font-size: 1.5rem;
+        color: #000; }
 
 /*# sourceMappingURL=style.css.map */
