add main.js to handle menu-btn, navbar and theme

--- a/Personal Website Vanilla/css/style.css
+++ b/Personal Website Vanilla/css/style.css
@@ -65,7 +65,9 @@ nav {
       opacity: 1;
       transition: opacity 0.3 ease-in-out; }
   nav .menu-btn {
-    display: none; }
+    display: none;
+    cursor: pointer;
+    color: #666666; }
 
 .home {
   padding-top: 80px;
