--- a/ProgressBarPractice/style.css
+++ b/ProgressBarPractice/style.css
@@ -4,7 +4,7 @@
 
 body {
   background-color: #f6f6fb;
-  font-family: 'Muli', sans-serif;
+  font-family: "Muli", sans-serif;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -20,12 +20,38 @@ body {
     margin-bottom: 30px;
     position: relative; }
     body .progress-container::before {
-      content: '';
+      content: "";
       background-color: #e0e0e0;
+      position: absolute;
       top: 50%;
       left: 0;
-      transform: translateY(-50%);
       width: 100%;
-      height: 4px; }
+      height: 4px;
+      transform: translateY(-50%);
+      transition: 0.4s ease;
+      z-index: -1; }
+  body .progress {
+    background-color: #3498db;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    transform: translateY(-50%);
+    transition: 0.4s ease;
+    z-index: -1; }
+  body .circle {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #999;
+    background-color: #fff;
+    border: 3px solid #e0e0e0;
+    transition: 0.4 ease; }
+    body .circle.active {
+      border-color: #3498db; }
 
 /*# sourceMappingURL=style.css.map */
